--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Design Canon Representation Project</title>
+    <title>741.6092</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.0/papaparse.min.js"></script>
     <script src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
@@ -14,6 +14,10 @@
 <body>
     <div id="root"></div>
     
+    <!-- Main application script -->
     <script type="text/babel" src="app.js"></script>
+    
+    <!-- Optional: Include region mapper script (remove in production) -->
+    <!-- <script src="region-mapper.js"></script> -->
 </body>
 </html>
